--- a/.gitignore
+++ b/.gitignore
@@ -127,5 +127,8 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# UrbanSound8K zip and unzipped
 data/UrbanSound8K.tar.gz
 .data/UrbanSound8K.tar.gz
+/data/UrbanSound8K
