Model Gen code now runs on all 7 traditional features

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,4 @@ data/UrbanSound8K.tar.gz
 /data/UrbanSound8K
 .vscode/settings.json
 /.data/UrbanSound8K
+output/intermediate-data/filedata-librosaFeatures.pkl
