--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ output/intermediate-data/filedata-librosaFeatures.pkl
 /data
 /output/validation
 /output/train
+output/intermediate-data/filedata-librosaFeatures.7z
